# Minecraft-Clone

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/block/: block.cpp  block.h
src/blockGenerator/: blockGenerator.h
src/camera/: camera.h
src/chunk/: chunk.cpp  chunk.h
src/cube/: cube.cpp  cube.h
src/grassblock/: grassBlock.cpp  grassBlock.h  grass_block.cpp  grass_block.h
src/shaders/: fragmentShader.frag  program.cpp  program.h  vertexShader.vert
src/textureAtlas/: textureAtlas.cpp  textureAtlas.h
src/triangle/: triangle.cpp  triangle.h
src/vertex/: vertex.cpp  vertex.h
src/voxelBlocks/: voxelChunk.cpp  voxelChunk.h
src/window/: window.cpp  window.h
src/world/: world.h
